# ccc-storage

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  mountd-docker-dev.yml  mountd-docker-release.yml
bench/: conda_small_files.py  image_small_files.py
deploy/: Dockerfile.mountd  PREREQS.md  README.md  ccc-layered-mountd.service  docker-smoke.sh  fuse-smoke.sh  install.sh  mountd-container-runtime-smoke.sh  mountd-entrypoint.sh  nested-runtime-smoke.sh  observation-fuse-runtime-smoke.sh  observation-runtime-smoke.sh  performance-runtime-benchmark.sh  privileged-runtime-container.sh  privileged-runtime-smoke.sh  runtime-smoke.sh  s3-cold-hpc-smoke.sh  s3-smoke.sh  write-policy-runtime-smoke.sh
deploy/config/: mountd.example.toml
deploy/docker/: mountd-entrypoint.sh  mountd.Dockerfile
deploy/systemd/: ccc-layered-mountd.service  ccc-storage-mountd.service  install.sh  uninstall.sh
dev/: README.md
dev/bench/: conda_small_files.py  image_small_files.py
dev/docker/: test.Dockerfile
docs/design/: per-child-write-policies.md
docs/operations/: cli-tools.md  cold-storage.md  conda-shim.md  configuration.md  log-structured-compaction.md  mountd-container.md  node-prerequisites.md
docs/performance/: conda-small-files-smoke.md  image-small-files-5000x32k.json  image-small-files-5000x32k.md  write-read-validation.md
src/ccc_layered_bench/: __init__.py  perf.py
src/ccc_layered_cli/: __init__.py  conda_shim.py  env.py  main.py
src/ccc_layered_core/: __init__.py  locks.py  manifest.py  names.py  observe.py  protocol.py  resolve.py
src/ccc_layered_hpc/: __init__.py  client.py  closure.py  hpc_run.py  hpc_s3_exchange.py  importqueue.py  object_store.py  s3mirror.py
src/ccc_layered_mountd/: __init__.py  childmount.py  control.py  daemon.py  dispatcher_fuse.py  env_txn.py  managed_parent.py  observation.py  overlay.py
src/ccc_layered_pack/: __init__.py  builder.py  bundle.py  cli.py  reader.py  verify.py
src/ccc_storage/: __init__.py  main.py
src/ccc_storage_bench/: perf.py
src/ccc_storage_cli/: __init__.py  conda_shim.py  env.py  main.py
src/ccc_storage_cold/: __init__.py  archive.py  config.py  object_store.py  policy.py
src/ccc_storage_core/: __init__.py  checksum.py  manifest.py  observe.py  resolve.py
src/ccc_storage_hpc/: __init__.py  client.py  closure.py  hpc_run.py  hpc_s3_exchange.py  importqueue.py  s3mirror.py
src/ccc_storage_mountd/: __init__.py  childmount.py  config.py  daemon.py  (+7 more)
tests/: __init__.py  conftest.py
(+151 files in other folders)
